Fix form layout, left align text, add padding

--- a/src/components/signUpForm/SignUpForm.scss
+++ b/src/components/signUpForm/SignUpForm.scss
@@ -39,6 +39,7 @@
 		z-index: 1;
 		max-width: 500px;
 		border-radius: 10px;
+		padding: 24px 40px;
 	}
 	h1 {
 		font-size: 28px;
@@ -55,6 +56,9 @@
 	h1,
 	h3 {
 		text-align: center;
+		@media (min-width: $breakpoint-tablet) {
+			text-align: left;
+		}
 	}
 	.input-wrapper {
 		position: relative;
